# devkit-cli

./: CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: plugin-local.json  plugin.json
agents/: blueprint-adapter.md  scan-triage.md
devkit/: cli.py  config.py  state.py
devkit/commands/: config_cmd.py  context_cmd.py  eval_cmd.py  fork_cmd.py  memory_cmd.py  scan.py  search_cmd.py
devkit/core/context/: assembler.py  manifest.py
devkit/core/eval/: ablation.py  headroom_bridge.py  judge.py  versions.py
devkit/core/fork/: blueprint.py  extractor.py
devkit/core/memory/: embedder.py  sqlite_backend.py  store.py
devkit/core/scanner/: classifier.py  claude_analyzer.py  graph_guide.py  orchestrator.py  prompts.py  scorer.py  semgrep_runner.py
devkit/core/search/: rrf.py  searcher.py
devkit_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: devkit-setup-and-sentinel-prompt.md  headroom-analysis.md  sentinel-port.py  slice-1-foundation-scan.md  slice-2-memory-search.md  slice-3-self-improving.md  slice-4-context.md  slice-5-fork.md  slice-6-eval.md  slice-7-plugin.md
hooks/: hooks.json
skills/context/: SKILL.md
skills/eval/: SKILL.md
skills/fork/: SKILL.md
skills/memory/: SKILL.md
skills/scan/: SKILL.md
skills/search/: SKILL.md
