[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "devkit-cli"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "anthropic>=0.40.0",
    "semgrep>=1.90.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
memory = [
    "sentence-transformers>=3.0.0",
    "sqlite-vec>=0.1.0",
    "numpy>=1.26.0",
]
graph = [
    "tree-sitter>=0.23.0",
    "networkx>=3.0",
    "numpy>=1.26.0",
]
eval = [
    "headroom-ai[proxy]>=0.1.0",
    "datasketch>=1.6.0",
    "xxhash>=3.4.0",
]

[project.scripts]
devkit = "devkit.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["devkit*"]
